--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silent Unbox Co</title>
-    <style>
-        body { font-family: 'Helvetica', sans-serif; margin: 0; background-color: #f4f4f4; color: #333; text-align: center; }
-        header { background: #000; color: #fff; padding: 50px 20px; }
-        nav { background: #222; padding: 10px; sticky: top; }
-        nav a { color: #fff; margin: 0 15px; text-decoration: none; font-size: 14px; text-transform: uppercase; }
-        .container { max-width: 800px; margin: auto; padding: 40px 20px; }
-        .video-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px; }
-        .video-placeholder { background: #ddd; height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 8px; }
-        footer { padding: 40px; font-size: 12px; color: #888; }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>SILENT UNBOX CO.</h1>
-        <p>Aesthetic • Minimal • Textures</p>
-    </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="https://youtube.com/@SilentUnboxCo">YouTube</a>
-        <a href="https://instagram.com/silentunboxco">Instagram</a>
-    </nav>
-    <div class="container">
-        <h2>Latest Moments</h2>
-        <div class="video-grid">
-            <div class="video-placeholder">Video 1</div>
-            <div class="video-placeholder">Video 2</div>
+<style>
+    header { background: #000; padding: 60px 20px; border-bottom: 5px solid #333; }
+    .category-tag { font-size: 12px; letter-spacing: 2px; text-transform: uppercase; color: #888; margin-bottom: 10px; display: block; }
+    .video-placeholder { 
+        background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?q=80&w=1000&auto=format&fit=crop'); /* Example footwear image */
+        background-size: cover;
+        background-position: center;
+        height: 350px; 
+    }
+</style>
+
+<div class="container">
+    <h2>Seasonal Drops</h2>
+    <div class="video-grid">
+        <div class="item">
+            <span class="category-tag">Footwear</span>
+            <div class="video-placeholder">Latest Sneaker Unbox</div>
         </div>
-        <p style="margin-top: 40px;">No voice. No face. Just the details.</p>
+        <div class="item">
+            <span class="category-tag">Apparel</span>
+            <div class="video-placeholder">Winter Collection Texture</div>
+        </div>
     </div>
-    <footer>© 2026 Silent Unbox Co.</footer>
-</body>
-</html>
+</div>
