--- a/index.html
+++ b/index.html
@@ -1,24 +1,118 @@
-<style>
-    header { background: #000; padding: 60px 20px; border-bottom: 5px solid #333; }
-    .category-tag { font-size: 12px; letter-spacing: 2px; text-transform: uppercase; color: #888; margin-bottom: 10px; display: block; }
-    .video-placeholder { 
-        background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?q=80&w=1000&auto=format&fit=crop'); /* Example footwear image */
-        background-size: cover;
-        background-position: center;
-        height: 350px; 
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Silent Unbox Co - Unboxing Channel</title>
 
-<div class="container">
-    <h2>Seasonal Drops</h2>
-    <div class="video-grid">
-        <div class="item">
-            <span class="category-tag">Footwear</span>
-            <div class="video-placeholder">Latest Sneaker Unbox</div>
-        </div>
-        <div class="item">
-            <span class="category-tag">Apparel</span>
-            <div class="video-placeholder">Winter Collection Texture</div>
-        </div>
+  <style>
+    body { 
+      font-family: Arial, sans-serif; 
+      margin: 0; 
+      padding: 0; 
+      background: #f7f7f7;
+    }
+
+    header { 
+      background: #000; 
+      color: #fff; 
+      padding: 30px 20px; 
+      text-align: center; 
+    }
+
+    nav { 
+      background: #222; 
+      padding: 12px; 
+      text-align: center; 
+    }
+
+    nav a { 
+      color: white; 
+      margin: 0 15px; 
+      text-decoration: none; 
+      font-weight: bold; 
+    }
+
+    section { 
+      padding: 40px 20px; 
+      max-width: 1000px; 
+      margin: auto; 
+    }
+
+    .gallery { 
+      display: grid; 
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+      gap: 20px; 
+    }
+
+    .gallery .item { 
+      background: #e0e0e0; 
+      padding: 40px; 
+      border-radius: 10px; 
+      text-align: center; 
+      font-size: 18px; 
+      font-weight: bold;
+    }
+
+    footer { 
+      background: #000; 
+      color: white; 
+      text-align: center; 
+      padding: 15px; 
+      margin-top: 40px; 
+    }
+  </style>
+</head>
+
+<body>
+
+  <header>
+    <h1>Silent Unbox Co</h1>
+    <p>Clean • Silent • Satisfying Unboxing Experience</p>
+  </header>
+
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#videos">Videos</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="home">
+    <h2>Latest Unboxings</h2>
+    <p>Welcome to Silent Unbox Co — where products speak louder than words.</p>
+
+    <div class="gallery">
+      <div class="item">Thumbnail 1</div>
+      <div class="item">Thumbnail 2</div>
+      <div class="item">Thumbnail 3</div>
     </div>
-</div>
+  </section>
+
+  <section id="about">
+    <h2>About Silent Unbox Co</h2>
+    <p>We create silent, aesthetic, and calming unboxing videos focused on product details, textures, and satisfying ASMR sounds.</p>
+    <p>Category Focus: Tech • Gadgets • Beauty • Everyday Products</p>
+  </section>
+
+  <section id="videos">
+    <h2>Watch Our Videos</h2>
+    <p>Subscribe to our YouTube channel to watch premium silent unboxing videos.</p>
+
+    <p><strong>YouTube:</strong> youtube.com/@SilentUnboxCo</p>
+
+    <!-- You can replace the link with your actual video embeds -->
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: silentunboxco@contact.com</p>
+    <p>Instagram: @silentunboxco</p>
+  </section>
+
+  <footer>
+    <p>© 2026 Silent Unbox Co. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
