--- a/index.html
+++ b/index.html
@@ -1,24 +1,81 @@
-<style>
-    header { background: #000; padding: 60px 20px; border-bottom: 5px solid #333; }
-    .category-tag { font-size: 12px; letter-spacing: 2px; text-transform: uppercase; color: #888; margin-bottom: 10px; display: block; }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Silent Unbox Co - Fashion & Footwear</title>
+  <style>
+    body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; margin: 0; padding: 0; background: #f7f7f7; color: #333; line-height: 1.6; }
+    header { background: #000; color: #fff; padding: 60px 20px; text-align: center; border-bottom: 5px solid #333; }
+    header h1 { letter-spacing: 3px; text-transform: uppercase; margin: 0; font-size: 2.5em; }
+    nav { background: #222; padding: 15px; text-align: center; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; text-transform: uppercase; font-size: 0.8em; }
+    section { padding: 60px 20px; max-width: 1100px; margin: auto; }
+    h2 { text-transform: uppercase; letter-spacing: 1px; border-left: 4px solid #000; padding-left: 15px; margin-bottom: 30px; }
+    
+    /* Grid Styles */
+    .video-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
+    .category-tag { font-size: 11px; letter-spacing: 2px; text-transform: uppercase; color: #888; margin-bottom: 10px; display: block; font-weight: bold; }
     .video-placeholder { 
-        background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?q=80&w=1000&auto=format&fit=crop'); /* Example footwear image */
+        background-color: #e0e0e0;
         background-size: cover;
         background-position: center;
-        height: 350px; 
+        height: 400px; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 4px;
+        color: #fff;
+        text-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+        font-weight: bold;
+        transition: transform 0.3s ease;
     }
-</style>
+    .video-placeholder:hover { transform: scale(1.02); }
 
-<div class="container">
+    /* Visual Content */
+    .footwear-img { background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?q=80&w=1000&auto=format&fit=crop'); }
+    .apparel-img { background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?q=80&w=1000&auto=format&fit=crop'); }
+
+    footer { background: #000; color: white; text-align: center; padding: 30px; margin-top: 40px; }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Silent Unbox Co</h1>
+    <p>Aesthetic • Minimal • Fashion Textures</p>
+  </header>
+
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">Concept</a>
+    <a href="https://youtube.com/@SilentUnboxCo">YouTube</a>
+    <a href="https://instagram.com/silentunboxco">Instagram</a>
+  </nav>
+
+  <section id="home">
     <h2>Seasonal Drops</h2>
     <div class="video-grid">
         <div class="item">
             <span class="category-tag">Footwear</span>
-            <div class="video-placeholder">Latest Sneaker Unbox</div>
+            <div class="video-placeholder footwear-img">Latest Sneaker Unbox</div>
         </div>
         <div class="item">
             <span class="category-tag">Apparel</span>
-            <div class="video-placeholder">Winter Collection Texture</div>
+            <div class="video-placeholder apparel-img">Texture Detail Session</div>
         </div>
     </div>
-</div>
+  </section>
+
+  <section id="about">
+    <h2>The Concept</h2>
+    <p>We provide high-definition, silent unboxing experiences. No voice, no face—just the raw aesthetic of premium apparel, footwear, and accessories.</p>
+    <p><strong>Focus:</strong> Fabric Quality • Stitching Details • Unboxing ASMR</p>
+  </section>
+
+  <footer>
+    <p>© 2026 Silent Unbox Co. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
