Update background images for footwear and apparel

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     }
     .video-placeholder:hover { transform: scale(1.02); }
 
-    /* Visual Content Links */
-    .footwear-img { background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?q=80&w=1000&auto=format&fit=crop'); }
-    .apparel-img { background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?q=80&w=1000&auto=format&fit=crop'); }
+    /* Visual Content - Selected for Minimal/No Branding */
+    .footwear-img { background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1560769629-975ec94e6a86?q=80&w=1000&auto=format&fit=crop'); }
+    .apparel-img { background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1591047139829-d91aecb6caea?q=80&w=1000&auto=format&fit=crop'); }
 
     footer { background: #000; color: white; text-align: center; padding: 30px; margin-top: 40px; font-size: 0.9em; }
   </style>
